# StarsFighter

./: CMakeLists.txt  LICENSE.txt  README.md
.github/: FUNDING.yml
StarsEngine/: CMakeLists.txt
StarsEngine/include/: GameEntry.hpp
StarsEngine/include/VFX/: Explosion.hpp  Particle.hpp
StarsEngine/include/framework/: Actor.hpp  AssetManager.hpp  Core.hpp  Delegate.hpp  GameBaseApp.hpp  HealthComponent.hpp  MathUtility.hpp  Object.hpp  PhysicsSystem.hpp  TimerHandler.hpp  TimersHandler.hpp  World.hpp
StarsEngine/include/gameplay/: GameStage.hpp
StarsEngine/include/helpers/: Logger.hpp
StarsEngine/src/: GameEntry.cpp
StarsEngine/src/VFX/: Explosion.cpp  Particle.cpp
StarsEngine/src/framework/: Actor.cpp  AssetManager.cpp  Delegate.cpp  GameBaseApp.cpp  HealthComponent.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimerHandler.cpp  TimersHandler.cpp  World.cpp
StarsEngine/src/gameplay/: GameStage.cpp
StarsEngine/src/helpers/: Logger.cpp
StarsFighter/: CMakeLists.txt
StarsFighter/src/: main.cpp
StarsFighterEngine/: CMakeLists.txt
StarsFighterEngine/include/: GameEntry.hpp
StarsFighterEngine/include/framework/: Actor.hpp  AssetManager.hpp  Core.hpp  GameBaseApp.hpp  HealthComponent.hpp  MathUtility.hpp  Object.hpp  PhysicsSystem.hpp  World.hpp
StarsFighterEngine/src/: GameEntry.cpp  main.cpp
StarsFighterEngine/src/framework/: Actor.cpp  AssetManager.cpp  Core.cpp  GameBaseApp.cpp  HealthComponent.cpp  Object.cpp  PhysicsSystem.cpp  World.cpp
StarsFighterEngine/src/helpers/: Logger.cpp
StarsFighterGame/: CMakeLists.txt  Config.h.in
StarsFighterGame/include/: Config.h
StarsFighterGame/include/Enemy/: EnemySpaceship.hpp  Vanguard.hpp  VanguardStage.hpp
StarsFighterGame/include/GameFramework/: StarsFighterGame.hpp
StarsFighterGame/include/Levels/: Level_1.hpp
StarsFighterGame/include/Player/: PlayerSpaceship.hpp
StarsFighterGame/include/Spaceship/: Spaceship.hpp
StarsFighterGame/include/Weapon/: Bullet.hpp  BulletShooter.hpp  Shooter.hpp
StarsFighterGame/src/Enemy/: EnemySpaceship.cpp  Vanguard.cpp  VanguardStage.cpp
StarsFighterGame/src/GameFramework/: StarsFighterGame.cpp
StarsFighterGame/src/Levels/: Level_1.cpp
StarsFighterGame/src/Player/: PlayerSpaceship.cpp
StarsFighterGame/src/Spaceship/: Spaceship.cpp
StarsFighterGame/src/Weapon/: Bullet.cpp  BulletShooter.cpp  Shooter.cpp
